welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: not found: type int
  var T = new Array[int] (num) {
                    ^golomb:3: error: illegal inheritance from final class Array
  var T = new Array[int] (num) {
              ^golomb:8: error: type mismatch;
 found   : Unit
 required: Int
} 
^